[package]
name = "bevy_debris"
version = "0.1.0"
authors = ["solarsail"]
edition = "2018"
default-run = "bevy_debris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3"
bevy_prototype_lyon = "0.1.2"
hexasphere = "1.0"
ordered-float = "2.0.0"
rand = "0.7.3"
